# nbfree

./: pyproject.toml
.github/workflows/: release.yml
src/nbfree/: __init__.py
